--- a/.github/workflows/translate_book.yaml
+++ b/.github/workflows/translate_book.yaml
@@ -18,6 +18,10 @@ jobs:
     steps:
       - name: Checkout Actions Repository
         uses: actions/checkout@v4
+        with:
+          repository: "yihong0618/bilingual_book_maker"
+          ref: "main"
+          path: "${{ github.workspace }}"
       - name: Check spelling with custom config file
         uses: crate-ci/typos@v1.16.6
         with:
