--- a/.github/workflows/translate_book.yaml
+++ b/.github/workflows/translate_book.yaml
@@ -55,13 +55,13 @@ jobs:
       - name: Test install
         run: pip install .
       - name: wget
-        run: wget "${{ matrix.link_folder }}/${{ matrix.book_name }}.${{ matrix.book_type }}"
+        run: wget ${{ matrix.link_folder }}/${{ matrix.book_name }}.${{ matrix.book_type }}
       - name: make txt book test using gemini
-        run: python3 make_book.py --book_name "${{ matrix.book_name }}.${{ matrix.book_type }}" --test --model gemini --gemini_key ${{ secrets.GEMINI_API_KEY }}  --language vi
+        run: python3 make_book.py --book_name ${{ matrix.book_name }}.${{ matrix.book_type }} --test --model gemini --gemini_key ${{ secrets.GEMINI_API_KEY }}  --language vi
             
       - name: Rename and Upload ePub
         if: env.GEMINI_API_KEY != null
         uses: actions/upload-artifact@v4
         with:
           name: epub_output
-          path: "${{ matrix.book_name }}_bilingual.${{ matrix.book_type }}"
+          path: ${{ matrix.book_name }}_bilingual.${{ matrix.book_type }}
