--- a/.github/workflows/translate_book.yaml
+++ b/.github/workflows/translate_book.yaml
@@ -15,7 +15,7 @@ env:
 jobs:
   typos-check:
     name: Spell Check with Typos
-    runs-on: ubuntu-latest
+    runs-on: colab
     steps:
       - name: Checkout Actions Repository
         uses: actions/checkout@v4
